fixes word-wrap issue introduced in nyanpals/commit/e871486dba9f7ba5bc39ad86a397fc64be380ee7

--- a/www/css/chat.css
+++ b/www/css/chat.css
@@ -1183,6 +1183,7 @@ background: url(clouds-full.png) repeat-y;
 	display: block;
 	white-space: pre-wrap;
 	font-size: 0.8rem;
+	word-break: break-all;
 }
 
 span.sender
